dev/ubby/network/allow-egress-logto.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-logto
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: soludev
          podSelector:
            matchLabels:
              app: logto
      ports:
        - protocol: TCP
          port: 3001
        - protocol: TCP
          port: 3002
