dev/ubby/network/allow-egress-phoenix.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-phoenix
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: soludev
          podSelector:
            matchLabels:
              app.kubernetes.io/name: phoenix
      ports:
        - protocol: TCP
          port: 6006
